# gef-file-to-map

./: CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: release_pypi.yaml
benches/: test_gef.rs
src/: error.rs  header.rs  lib.rs  nom.rs
tests/: big-file.gef  header.gef  tabs.gef
