[package]
name = "gef-file-to-map"
version = "0.2.0"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
itertools = "0.14.0"
pyo3 = { version = "0.25.0", features = ["extension-module", "abi3-py37"] }
thiserror = "2.0.12"
winnow = "0.7.7"

[dev-dependencies]
divan = "0.1.21"

[[bench]]
name = "test_gef"
harness = false

[profile.release]
lto = true
codegen-units = 1
